--- a/Chat/index.html
+++ b/Chat/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=100%, initial-scale=1">
-        <title>与Ta聊天中</title>
+        <title>Wesleep!</title>
         <link href="css/main.min.css" rel="stylesheet" type="text/css">
         <link rel="Shortcut Icon" href="favicon.ico"/>
-        
+
         <link rel="preload" href="img/head.jpg" as="image">
         <link rel="preload" href="img/1.jpg" as="image">
         <link rel="preload" href="img/2.jpg" as="image">
