--- a/Tree/index.html
+++ b/Tree/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "htt`://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>生日快乐!</title>     
+    <title>Tree!</title>     
     <link type="text/css" rel="stylesheet" href="./css/default.css">
     <script type="text/javascript" src="./css/jquery.min.js"></script>
     <script type="text/javascript" src="./css/jscex.min.js"></script>
@@ -18,9 +18,9 @@
         </style>
 </head>
     <body>
-      <audio autoplay="autopaly">
+      /* <audio autoplay="autopaly">
           <source src="music/love.mp3" type="audio/mp3" />
-      </audio>  
+      </audio>   */
         <div id="main">
              <div id="wrap">
                 <div id="text">
@@ -33,13 +33,13 @@
 <span class="say">温暖而不炙热，覆盖我所有肌肤。</span><br><br>
 <span class="say">由起点到夜晚，由山野到书房，一切问题的答案都很简单。</span><br><br>
 <span class="say">我希望有个如你一般的人，贯彻未来，数遍生命的公路牌。</span><br><br>
-<span class="say"><span class="space"></span> -- 广告招商栏 --</span><br>
-<span class="say"><h1>不是生日也快乐!</h1></span><br>
+<span class="say"><span class="space"></span> -- TO THE MOON AND ROSY --</span><br>
+<span class="say"><h1>愿你每天都快乐，不掉头发不熬夜!</h1></span><br>
         </font>
       </div>
                 </div>
                 <div id="clock-box">
-                    <!-- <span class="STYLE1"></span><font color="#33CC00">距离我喜欢你，</font>
+                    <!-- <span class="STYLE1"></span><font color="#33CC00">距离不开心，</font>
 <span class="STYLE1">已经是……</span> -->
 <span class="STYLE1"></span>
 <font color="#33CC00"></font>
@@ -182,9 +182,9 @@
 
         var textAnimate = eval(Jscex.compile("async", function () {
         var together = new Date();
-        together.setFullYear(2022,12,1 );      //时间年月日
-        together.setHours(0);            //小时  
-        together.setMinutes(0);          //分钟
+        together.setFullYear(2022,11,26 );      //时间年月日
+        together.setHours(1);            //小时  
+        together.setMinutes(20);          //分钟
         together.setSeconds(0);         //秒前一位
         together.setMilliseconds(2);        //秒第二位
 
