--- a/Chat/index.html
+++ b/Chat/index.html
@@ -27,7 +27,7 @@
     <body>
         <div id="mobile" :class="{ 'has-prompt': hasPrompt }">
             <div id="mobile-head">
-                <div id="mobile-head-title">对方正在输入...</div>
+                <div id="mobile-head-title">与Fyl😙聊天中</div>
             </div>
             <div id="mobile-body">
                 <div id="mobile-body-bg"></div>
@@ -74,7 +74,7 @@
                     v-on:click="togglePrompt(true)"
                     :class="{'clickable': !isTyping }">
                     <span v-if="!isTyping">我想说……</span>
-                    <span v-if="isTyping">对方正在输入...</span>
+                    <span v-if="isTyping">对方正在输入中</span>
                 </div>
             </div>
             <div id="prompt-bg" v-on:click="togglePrompt(false)"></div>
