--- a/index.html
+++ b/index.html
@@ -76,16 +76,7 @@
 
         Features - 展望未来<br>
         <h5>
-            <a href="#" class="渐变2">在线记仇小本本</a>
-        </h5>
-        <h5>
-            <a href="#" class="渐变3">微信闹钟</a>
-        </h5>
-        <h5>
-            <a href="#" class="渐变4">今天吃什么</a>
-        </h5>
-        <h5>
-            <a href="#" class="渐变">...</a>
+           取消原计划，新增更新无限期推迟
         </h5>
         <del>其实都还没做</del>
     </div>
